# iot-identity-service

.github/workflows/: e2e-tests-manual.yaml  packages-release.yaml  packages.yaml
aziotd/: Cargo.toml
aziotd/src/: main.rs
cert/aziot-certd/: Cargo.toml
cert/aziot-certd/src/http/: mod.rs
ci/e2e-tests/: helper-functions.sh
http-common/: Cargo.toml
http-common/src/: request.rs  server.rs
identity/aziot-identity-client-async/: Cargo.toml
identity/aziot-identity-client-async/src/: lib.rs
identity/aziot-identityd/: Cargo.toml
identity/aziot-identityd/src/http/: create_or_list_module_identity.rs  mod.rs
key/aziot-keyd/: Cargo.toml
key/aziot-keyd/src/http/: mod.rs
key/aziot-keys/: aziot-keys.h
tpm/aziot-tpmd/: Cargo.toml
tpm/aziot-tpmd/src/http/: mod.rs
