[package]
name = "aziotd"
version = "1.3.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"


[dependencies]
backtrace = "0.3"
cfg-if = "1.0"
hyper = "0.14"
log = "0.4"
serde = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

aziot-certd = { path = "../cert/aziot-certd"  }
aziot-identityd = { path = "../identity/aziot-identityd", features = ["otel"]  }
aziot-keyd = { path = "../key/aziot-keyd" }
aziot-tpmd = { path = "../tpm/aziot-tpmd" }
config-common = { path = "../config-common"  }
http-common = { path = "../http-common", features = ["otel"]  }
logger = { path = "../logger" }
opentelemetry = { version = "0.16", features = ["rt-tokio", "metrics", "serialize"], optional = true }
opentelemetry-http = { version = "0.5", optional = true }
opentelemetry-otlp = { version = "0.9", features = ["tonic", "metrics"], optional = true }

[features]
otel = ["opentelemetry", "opentelemetry-http", "opentelemetry-otlp"]
